--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
 
     // An array of video objects with video IDs and start times
     var videos = [
-      { id: 'eKThFMTDwGQ', start: getRandomInt(0, 300) },
-      { id: '0Egw3hIh1FM', start: getRandomInt(0, 300) },
-      { id: '3IUxxrVlWK0', start: getRandomInt(0, 300) },
-      { id: '5yHBWJG0sro', start: getRandomInt(0, 300) },
+      { id: 'NQQIEUDe6Qo', start: getRandomInt(0, 300) },
+      { id: 'j6Rigx87INE', start: getRandomInt(0, 300) },
+      { id: 'TfdwuK5n2fo', start: getRandomInt(0, 300) },
+      { id: 'kbIBh7dg1pg', start: getRandomInt(0, 300) },
+      { id: '7XGuGqf_dxw', start: getRandomInt(0, 300) },
+      { id: 'DtiGPUFVqD8', start: getRandomInt(0, 300) },
+      { id: 'zWddWhpKrmM', start: getRandomInt(0, 300) },
+      { id: 'zqW1Xv5Pinc', start: getRandomInt(0, 300) },
+      { id: '3HCaqKWuyhk', start: getRandomInt(0, 300) }
       // Add more video IDs and start times as needed
     ];
 
