--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div id="playerContainer"></div>
-  <button onclick="playRandomVideos()">PIXETROPE I</button>
+  <button onclick="playRandomVideos()">PIXETROPE</button>
 
   <script>
     // Utility function to get a random integer within a range
